2008-11-08  Curtis Gedak  <gedakc@gmail.com>

	* include/ext2.h,
	  include/ext3.h,
	  include/fat16.h,
	  include/fat32.h,
	  include/hfs.h,
	  include/hfsplus.h,
	  include/jfs.h,
	  include/linux_swap.h,
	  include/ntfs.h,
	  include/reiser4.h,
	  include/reiserfs.h,
	  include/xfs.h,
	  include/ufs.h: Renamed set_label and get_label methods.

	* src/ext2.cc,
	  src/ext3.cc,
	  src/fat16.cc,
	  src/fat32.cc,
	  src/hfs.cc,
	  src/hfsplus.cc,
	  src/jfs.cc,
	  src/linux_swap.cc,
	  src/ntfs.cc,
	  src/reiser4.cc,
	  src/reiserfs.cc,
	  src/ufs.cc,
	  src/xfs.cc: Renamed set_label and get_label methods.
	
	* include/FileSystem.h,
	  include/GParted_Core.h,
	  include/Utils.h: Renamed set_label and get_label methods.
	
	* src/DialogFeatures.cc
	  src/FileSystem.cc,
	  src/GParted_Core.cc: Renamed set_label and get_label methods.
	  - Renamed set_label to write_label, renamed get_label to read_label.
	  - Preference is to reserve set/get for object attribute handling.

2008-11-05  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Partition_Copy.cc: Fixed copy and paste partition problem.
	  - Resolved destination partition too small on copy and paste.
	  - Added exclusion for primary partitions at the start of the disk.
	  - Closes GParted bug #556058

2008-11-04  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Progress.cc,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc: Fixed some spelling mistakes

	* src/Win_GParted.cc: Added label update for paste to existing partition

2008-10-31  Curtis Gedak  <gedakc@gmail.com>

	* src/reiser4.cc,
	  README: Changed get_label() to use vol_id instead of debugfs.reiser4

	* src/GParted_Core.cc: Changed thread status messages to be unique

2008-10-30  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Added translator comments
	  - Removed ellipses from status messages in set_devices()

	* src/Win_GParted.cc: Added thread status message update to pulsebar

	* include/GParted_Core.h,