@@ -12,6 +12,7 @@ not an invitation to misrepresent who contributed to GNU GParted.
 We need to keep track of copyright (see the Maintainer HOWTO on www.gnu.org).
 
 Curtis Gedak		<gedakc@users.sourceforge.net>
+	* Wrote Utils::fat_compliant_label() method
 	* Wrote Utils::cleanup_cursor() function
 	* Rewrote read_label functionality for hfs
 	* Wrote create, read_label, and check_repair functionality for hfs+
